--- a/terms_new.html
+++ b/terms_new.html
@@ -70,7 +70,7 @@ Issues and Misc.</a></h4>
 </a></h3>
 <p style="margin-left: 40px;">This
 Agreement (including the Supplemental Terms, as applicable) is a legal
-agreement between you and JETKITE YAZILIM SANAYI VE TICARET LIMITED SIRKETI, a Turkish registered company
+agreement between you and Morning Time Inc., an unregistered sub-company under JETKITE YAZILIM SANAYI VE TICARET LIMITED SIRKETI, which is a Turkish registered company
 which governs your use of the Morning Time Apps. By installing or otherwise
 using the Morning Time Apps, you: (a) agree to be bound by the terms and
 conditions of this document, (b) you represent and warrant that you own
