--- a/terms_new.html
+++ b/terms_new.html
@@ -579,7 +579,7 @@ provide to us
 for the purposes described in this agreement and in furtherance of your
 use of
 the Morning Time App our services, in accordance with the Privacy Policy
-located <span style="color: red;">here</span>.</p>
+located in the same domain.</p>
 <p style="margin-left: 40px;" class="MsoNormal"><o:p>&nbsp;</o:p></p>
 <h3 style="margin-left: 40px;"><a name="I._UNINSTALLREMOVAL_OF_AN_Morning Time_APP:"></a>I<span style="font-weight: bold;">. UNINSTALL/REMOVAL OF AN Morning Time
 APP:</span></h3>
