--- a/help.html
+++ b/help.html
@@ -18,7 +18,7 @@
         <script type="text/javascript" src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> 
 
 <div class="container">
-  <h1>The Clock Help</h1>
+  <h1>Alarm Clock Xs Help</h1>
   <div class="panel-group" id="accordion">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -124,7 +124,7 @@
                             <p></p>
                             
                             <p>In order to add an Alarm Clock Widget to your home screen;</p>
-                            <p class="indented"><strong>Add widgets:</strong>Go to widgets from your device. <strong>Choose:</strong> The Clock widgets. Tap and hold desired widget and move it to your home screen</p>
+                            <p class="indented"><strong>Add widgets:</strong>Go to widgets from your device. <strong>Choose:</strong> Alarm Clock Xs widgets. Tap and hold desired widget and move it to your home screen</p>
                             <p>Choose an alarm to display on widget.</p>
                             <p><strong>To activate or de-activate and alarm;</strong></p>
                             <p>Tap Clock icon.</p>
